First web-site version, still not complete

--- a/_includes/head.html
+++ b/_includes/head.html
@@ -2,13 +2,14 @@
 <meta charset="utf-8" />
 <meta http-equiv="X-UA-Compatible" content="IE=edge" />
 <meta name="viewport" content="width=device-width, initial-scale=1" />
-<title>Smat-F2 Data Fusion UI</title>
+<title>{{site.title}}</title>
 
 <!-- Bootstrap -->
-<link href="assets/css/bootstrap.min.css" rel="stylesheet" />
+<link href="/assets/css/bootstrap.min.css" rel="stylesheet" />
+
 
 <!-- Font Awesome -->
-<link href="assets/css/font-awesome.min.css" rel="stylesheet" />
+<link href="/assets/css/font-awesome.min.css" rel="stylesheet" />
 
 <!-- Google fonts -->
 <link href='http://fonts.googleapis.com/css?family=Marvel:400,700'
@@ -18,12 +19,14 @@
 <!-- found scripts -->
 {% for item in page.css %}
 <!-- {{item}} -->
-<link href="assets/css/{{item}}" rel="stylesheet" />
+<link href="/assets/css/{{item}}" rel="stylesheet" />
 {% endfor %}
 {% endif %}
 
 <!-- Custom css -->
-<link href="assets/css/custom.css" rel="stylesheet" />
+<link href="/assets/css/navbar-dark-orange.css" rel="stylesheet" />
+<link href="/assets/css/custom.css" rel="stylesheet" />
+
 
 
 
