--- a/_includes/navbar.html
+++ b/_includes/navbar.html
@@ -1,4 +1,4 @@
-<nav class="navbar navbar-default">
+<nav class="navbar navbar-custom">
   <div class="container-fluid">
     <div class="navbar-header">
     	<button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#dogont-navbar">
@@ -6,15 +6,17 @@
         <span class="icon-bar"></span>
         <span class="icon-bar"></span>
       </button>
-      <a class="navbar-brand" href="index.html">
-        DogOnt
+      <a class="navbar-brand" href="/index.html">
+        <img src="/assets/img/dogont-logo-inverse.png" class="pull-left"/> <span class="pull-right">DogOnt</span>
       </a>
     </div>
     <div class="collapse navbar-collapse" id="dogont-navbar">
     	<ul class="nav navbar-nav">
-    		<li><a href="index.html">Home</a></li>
-    		<li><a href="process.html">Examples/a></li>
-    		<li><a href="#">Specification</a></li>
+    		<li><a href="#">Getting started</a></li>
+    		<li><a href="#">Cookbook</a></li>
+    		<li><a href="#">Users guide</a></li>
+    		<li><a href="/dogont.html">Specification </a></li>
+    		<li><a href="/news.html">News</a></li>
       	</ul>
     </div>	
   </div>
