--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -1,10 +1,11 @@
 ---
 layout: default
 ---
-<div class="post">
+<div class="row">
+<div class="col-md-10 col-md-offset-1 well">
 
   <header class="post-header">
-    <h1 class="post-title">{{ page.title }}</h1>
+    <h3 class="post-title">{{ page.title }}</h3>
     <p class="post-meta">{{ page.date | date: "%b %-d, %Y" }}{% if page.author %} • {{ page.author }}{% endif %}{% if page.meta %} • {{ page.meta }}{% endif %}</p>
   </header>
 
@@ -12,4 +13,5 @@ layout: default
     {{ content }}
   </article>
 
+</div>
 </div>
