--- a/_includes/head.html
+++ b/_includes/head.html
@@ -5,11 +5,11 @@
 <title>{{site.title}}</title>
 
 <!-- Bootstrap -->
-<link href="/assets/css/bootstrap.min.css" rel="stylesheet" />
+<link href="{{site.baseurl}}/assets/css/bootstrap.min.css" rel="stylesheet" />
 
 
 <!-- Font Awesome -->
-<link href="/assets/css/font-awesome.min.css" rel="stylesheet" />
+<link href="{{site.baseurl}}/assets/css/font-awesome.min.css" rel="stylesheet" />
 
 <!-- Google fonts -->
 <link href='http://fonts.googleapis.com/css?family=Marvel:400,700'
@@ -19,13 +19,13 @@
 <!-- found scripts -->
 {% for item in page.css %}
 <!-- {{item}} -->
-<link href="/assets/css/{{item}}" rel="stylesheet" />
+<link href="{{site.baseurl}}/assets/css/{{item}}" rel="stylesheet" />
 {% endfor %}
 {% endif %}
 
 <!-- Custom css -->
-<link href="/assets/css/navbar-dark-orange.css" rel="stylesheet" />
-<link href="/assets/css/custom.css" rel="stylesheet" />
+<link href="{{site.baseurl}}/assets/css/navbar-dark-orange.css" rel="stylesheet" />
+<link href="{{site.baseurl}}/assets/css/custom.css" rel="stylesheet" />
 
 
 
