--- a/_includes/navbar.html
+++ b/_includes/navbar.html
@@ -6,7 +6,7 @@
         <span class="icon-bar"></span>
         <span class="icon-bar"></span>
       </button>
-      <a class="navbar-brand" href="/index.html">
+      <a class="navbar-brand" href="{{site.baseurl}}/index.html">
         <img src="/assets/img/dogont-logo-inverse.png" class="pull-left"/> <span class="pull-right">DogOnt</span>
       </a>
     </div>
@@ -15,8 +15,8 @@
     		<li><a href="#">Getting started</a></li>
     		<li><a href="#">Cookbook</a></li>
     		<li><a href="#">Users guide</a></li>
-    		<li><a href="/dogont.html">Specification </a></li>
-    		<li><a href="/news.html">News</a></li>
+    		<li><a href="{{site.baseurl}}/dogont.html">Specification </a></li>
+    		<li><a href="{{site.baseurl}}/news.html">News</a></li>
       	</ul>
     </div>	
   </div>
