--- a/_includes/navbar.html
+++ b/_includes/navbar.html
@@ -7,7 +7,7 @@
         <span class="icon-bar"></span>
       </button>
       <a class="navbar-brand" href="{{site.baseurl}}/index.html">
-        <img src="/assets/img/dogont-logo-inverse.png" class="pull-left"/> <span class="pull-right">DogOnt</span>
+        <img src="{{site.baseurl}}/assets/img/dogont-logo-inverse.png" class="pull-left"/> <span class="pull-right">DogOnt</span>
       </a>
     </div>
     <div class="collapse navbar-collapse" id="dogont-navbar">
