--- a/_includes/navbar.html
+++ b/_includes/navbar.html
@@ -12,7 +12,7 @@
     </div>
     <div class="collapse navbar-collapse" id="dogont-navbar">
     	<ul class="nav navbar-nav">
-    		<li><a href="#">Getting started</a></li>
+    		<li><a href="{{site.baseurl}}/gettingstarted.html">Getting started</a></li>
     		<li><a href="#">Cookbook</a></li>
     		<li><a href="#">Users guide</a></li>
     		<li><a href="{{site.baseurl}}/dogont.html">Specification </a></li>
