Updated documentation web site

--- a/_includes/navbar.html
+++ b/_includes/navbar.html
@@ -15,7 +15,8 @@
     		<li><a href="{{site.baseurl}}/gettingstarted.html">Getting started</a></li>
     		<li><a href="#">Cookbook</a></li>
     		<li><a href="#">Users guide</a></li>
-    		<li><a href="{{site.baseurl}}/dogont.html">Specification </a></li>
+    		<li><a href="{{site.baseurl}}/documentation/index-en.html">Specification </a></li>
+    		<li><a href="https://raw.githubusercontent.com/iot-ontologies/dogont/master/dogont.owl">Download</a></li>
     		<li><a href="{{site.baseurl}}/news.html">News</a></li>
       	</ul>
     </div>	
